load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vbence/podstats/cmd/podstats",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_victorspringer_http_cache//:go_default_library",
        "@com_github_victorspringer_http_cache//adapter/memory:go_default_library",
        "@in_gopkg_inf_v0//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_client_go//util/homedir:go_default_library",
        "@io_k8s_metrics//pkg/apis/metrics/v1beta1:go_default_library",
        "@io_k8s_metrics//pkg/client/clientset/versioned:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "podstats",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
