load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vbence/podstats/cmd/proxy",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)

go_binary(
    name = "proxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
